# leafcutter2

./: .gitignore  README.md  leafcutter2_env.yml  pyproject.toml
.github/workflows/: ci.yml
example/: junction_files.txt
example/annotation/: chr10.fa.gz.fai  chr10.fa.gz.gzi
scripts/: ForwardSpliceJunctionClassifier.py  Reformat_gtf.py  Transcript_tools.py  leafcutter2.py
src/leafcutter2/: __init__.py  classifier.py  cli.py  clustering.py  pipeline.py  star_utils.py  transcript_tools.py
src/leafcutter2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_integration.py
tests/reference_outputs/test1/: cluster_ratios.txt  junction_counts.txt
tests/reference_outputs/test2/: cluster_ratios.txt  junction_counts.txt
tests/reference_outputs/test3/: cluster_ratios.txt  junction_counts.txt
tests/reference_outputs/test4/: cluster_ratios.txt  junction_counts.txt
